--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rdimascio/angry-weather-twitter-bot.git"
+    "url": "https://github.com/rdimascio/angry-weather-twitter-bot.git"
   },
   "keywords": [
     "twitter",
